--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 <body>
     <canvas id="display-canvas"></canvas>
     <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/load.js"></script>
+
 </body>
 </html>
